# nethercore

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION-ORDER.md  KNOWN_ISSUES.md  LAYER_ORDERING_FIX.md  LICENSE-APACHE  LICENSE-MIT  README.md  SKINNED_MESH_ANALYSIS.md  SUGGESTED_TASKS.md  TASKS.md  TEST_PLAN.md  XM_PLAYBACK_ANALYSIS.md  XM_SAMPLE_EXTRACTION.md  XM_SPEC_COMPLIANCE.md  dev-loop.toml  emberware-z-ffi.rs  emberware-zx-ffi.rs
core/: Cargo.toml
core/src/: capture.rs  console.rs  ffi.rs  integration.rs  lib.rs  rollback.rs  runner.rs  runtime.rs  save_store.rs  test_utils.rs  wasm.rs
core/src/analysis/: mod.rs
core/src/app/: config.rs  debug.rs  error_parsing.rs  event_loop.rs  input.rs  mod.rs  preview.rs  session.rs  standalone.rs  types.rs
core/src/debug/: export.rs  ffi.rs  frame_control.rs  mod.rs  panel.rs  registry.rs  stats.rs  types.rs
core/src/ffi/: mod.rs  random.rs  save.rs  session.rs  system.rs  tests.rs
core/src/integration/: full_integration_tests.rs  input_tests.rs  lifecycle_tests.rs  mod.rs  rollback_tests.rs
core/src/net/: mod.rs
core/src/replay/: mod.rs  types.rs
core/src/rollback/: config.rs  connection.rs  events.rs  local_socket.rs  mod.rs  player.rs  session.rs  state.rs
core/src/runtime/: config.rs  game_loop.rs  mod.rs  sync_test.rs  tests.rs
core/src/wasm/: camera.rs  draw.rs  engine.rs  input.rs  instance.rs  mod.rs  render.rs  state.rs  tests.rs
core/src/workbench/: mod.rs
ember-qoa/: Cargo.toml
ember-qoa/src/: decode.rs  encode.rs  lib.rs
emberware-z/: Cargo.toml  build.rs  pbr-lite.wgsl
emberware-z/shaders/: blinnphong_common.wgsl  common.wgsl  mode0_unlit.wgsl  mode1_matcap.wgsl  mode2_pbr.wgsl  mode3_blinnphong.wgsl  mode3_hybrid.wgsl  quad_template.wgsl  quad_unlit.wgsl  sky.wgsl  sky_template.wgsl
emberware-z/src/: app.rs  audio.rs  capture.rs  config.rs  console.rs  deep_link.rs  download.rs  ffi.rs  font.rs  game_resolver.rs  graphics.rs  input.rs  lib.rs  library.rs  main.rs  player.rs  procedural.rs  resource_manager.rs  settings_ui.rs  shader_gen.rs  state.rs  ui.rs
emberware-z/src/app/: debug_values.rs  game_session.rs  init.rs  mod.rs  ui.rs
emberware-z/src/ffi/: assets.rs  audio.rs  billboard.rs  camera.rs  config.rs  draw_2d.rs  draw_3d.rs  guards.rs  helpers.rs  input.rs  keyframes.rs  lighting.rs  material.rs  mesh.rs  mesh_generators.rs  mod.rs  render_state.rs  rom.rs  skinning.rs  sky.rs  texture.rs  transform.rs
emberware-z/src/graphics/: buffer.rs  command_buffer.rs  draw.rs  frame.rs  init.rs  instance_data.rs  matrix_packing.rs  mod.rs  packing.rs  pipeline.rs  quad_instance.rs  render_state.rs  texture_manager.rs  unified_shading_state.rs  unified_shading_state_test.rs  vertex.rs
emberware-z/src/procedural/: mod.rs  primitives_uv.rs  types.rs
emberware-z/src/runtime/: mod.rs
emberware-z/src/state/: config.rs  ffi_state.rs  mod.rs  resources.rs  rollback_state.rs
emberware-z/tests/: matrix_packing_test.rs
examples/prism-survivors/: Cargo.toml
examples/prism-survivors/src/: lib.rs
launcher/: Cargo.toml
launcher/src/: registry.rs
nether-it/: Cargo.toml
nether-it/src/: compression.rs  error.rs  extract.rs  lib.rs  minimal.rs  module.rs  parser.rs  writer.rs
nether-it/src/minimal/: legacy.rs  mod.rs  pack.rs  parse.rs  tests.rs
nether-it/src/module/: envelope.rs  instrument.rs  mod.rs  sample.rs
nether-it/src/parser/: helpers.rs  instrument.rs  mod.rs  pattern.rs  sample.rs  tests.rs
nether-it/src/writer/: encoding.rs  mod.rs  pattern_packer.rs  serializer.rs  tests.rs
nether-qoa/: Cargo.toml
nether-qoa/src/: decode.rs  encode.rs  lib.rs  lms.rs
nether-tracker/: Cargo.toml
nether-tracker/src/: convert_it.rs  convert_xm.rs  converter.rs  effects.rs  instrument.rs  lib.rs  pattern.rs  sample.rs  tests.rs
nether-tracker/src/convert_it/: effects.rs  instrument.rs  mod.rs
nether-tracker/src/convert_xm/: effects.rs  instruments.rs  mod.rs  tests.rs
nether-xm/: Cargo.toml  test_python_xm.rs
nether-xm/src/: error.rs  extract.rs  lib.rs  minimal.rs  module.rs  parser.rs
nether-xm/src/minimal/: io.rs  mod.rs  packer.rs  parser.rs  tests.rs
nether-xm/src/parser/: mod.rs  read.rs  tests.rs  write.rs
nethercore-zx/: Cargo.toml  build.rs
nethercore-zx/build_support/: common_extract.rs  epu_meta.rs  ffi.rs  formats.rs  generated_code.rs  generator.rs  mod.rs  snippets.rs  sources.rs
nethercore-zx/shaders/: blinnphong_common.wgsl  blit.wgsl  common.wgsl  env_template.wgsl  mode0_lambert.wgsl  mode1_matcap.wgsl  quad_template.wgsl  sky_template.wgsl
nethercore-zx/shaders/common/: 00_bindings.wgsl  10_unpacking.wgsl  30_lighting.wgsl  90_vertex_io.wgsl
nethercore-zx/shaders/epu/: epu_bounds.wgsl  epu_common.wgsl  epu_compute_blur.wgsl  epu_compute_copy_cube_faces.wgsl  epu_compute_env.wgsl  epu_compute_import_cube.wgsl  epu_compute_irrad.wgsl  (+4 more)
nethercore-zx/src/: audio.rs  audio_thread.rs  console.rs  font.rs  input.rs  lib.rs  library.rs  player.rs  replay.rs  resource_manager.rs  shader_gen.rs  tracker.rs
shared/: Cargo.toml
shared/src/: api.rs  auth.rs  console.rs  constants.rs  fs.rs  ids.rs  lib.rs  local.rs  math.rs  netplay.rs  requests.rs  rom_format.rs  screenshot.rs
tools/ember-cli/: Cargo.toml  build.rs
tools/ember-export/: Cargo.toml  build.rs
tools/ffi-gen/: Cargo.toml
tools/gen-assets/: Cargo.toml
tools/gen-glb-inline-assets/: Cargo.toml
tools/gen-glb-rigid-assets/: Cargo.toml
tools/gen-gltf-test-assets/: Cargo.toml
tools/gen-test-anim/: Cargo.toml
tools/gen-tracker-demo-it/: Cargo.toml
tools/gen-tracker-demo-xm/: Cargo.toml
tools/glb-builder/: Cargo.toml
tools/nether-cli/: Cargo.toml  build.rs
tools/nether-export/: Cargo.toml  build.rs
tools/proc-gen/: Cargo.toml
tools/tracker-debug/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: ffi.rs  main.rs
z-common/: Cargo.toml
z-common/src/: lib.rs  loader.rs  packing.rs
zx-common/: Cargo.toml
zx-common/src/: lib.rs  loader.rs  packing.rs  wgsl_meta_parser.rs
zx-common/tests/: wgsl_meta_parser_tests.rs
(+1410 files in other folders)
