[package]
name = "emberware"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified Emberware fantasy console launcher"

[[bin]]
name = "emberware"
path = "src/main.rs"

[dependencies]
# Local crates
emberware-core = { path = "core" }
emberware-shared = { path = "shared" }
emberware-z = { path = "emberware-z" }

# Workspace dependencies
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
directories.workspace = true
hashbrown.workspace = true

[workspace]
members = ["core", "emberware-z", "shared", "z-common", "xtask", "tools/ember-export", "tools/ember-cli", "tools/gen-test-anim"]
exclude = ["examples/hello-world", "examples/triangle", "examples/textured-quad", "examples/cube", "examples/lighting", "examples/skinned-mesh", "examples/billboard", "examples/platformer", "examples/blinn-phong", "examples/procedural-shapes", "examples/audio-demo", "examples/textured-procedural", "examples/debug-demo", "examples/datapack-demo", "examples/font-demo", "examples/level-loader", "examples/asset-test", "examples/inspector-common", "examples/mode0-inspector", "examples/mode1-inspector", "examples/mode2-inspector", "examples/mode3-inspector", "examples/dither-demo", "examples/material-override", "examples/animation-demo"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/emberware/emberware"

[workspace.dependencies]
# WASM runtime
wasmtime = "27"

# Rollback netcode
ggrs = "0.10"

# Windowing
winit = "0.30"

# Graphics
wgpu = "23"

# Audio
rodio = "0.19"

# Input
gilrs = "0.11"

# UI
egui = "0.30"
egui-wgpu = "0.30"
egui-winit = "0.30"

# Math
glam = { version = "0.29", features = ["bytemuck"] }
half = { version = "2.4", features = ["bytemuck", "serde"] }

# Serialization
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
bitcode = "0.6"

# Async runtime
tokio = { version = "1", default-features = false }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

# Random number generation
rand = "0.8"
rand_pcg = "0.3"

# HTTP
reqwest = { version = "0.12", default-features = false }

# Utilities
toml = "0.8"
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
pollster = "0.4"
open = "5"

# Performance - faster HashMap/HashSet
hashbrown = "0.15"
