[workspace]
members = ["core", "nethercore-zx", "shared", "zx-common", "library", "xtask", "nether-qoa", "nether-xm", "tools/nether-export", "tools/nether-cli", "tools/ffi-gen", "tools/gen-test-anim", "tools/gen-multi-skinned-assets", "tools/gen-tracker-demo", "tools/proc-gen", "tools/gen-assets"]
default-members = ["library"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nethercore/nethercore"

[workspace.dependencies]
# WASM runtime
wasmtime = "39"  # Latest stable (v39+ requires edition 2024)

# Rollback netcode
ggrs = "0.11"

# Windowing
winit = "0.30"

# Graphics
wgpu = "27"

# Audio
cpal = "0.16"
ringbuf = "0.4"

# Input
gilrs = "0.11"

# UI
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"
eframe = "0.33"

# Math
glam = { version = "0.30", features = ["bytemuck"] }
half = { version = "2", features = ["bytemuck", "serde"] }

# Serialization
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
bitcode = "0.6"

# Async runtime
tokio = { version = "1", default-features = false, features = ["rt", "sync", "rt-multi-thread", "macros", "fs"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random number generation
rand = "0.9"
rand_pcg = "0.9"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }

# Utilities
toml = "0.9"
directories = "6"
chrono = { version = "0.4", features = ["serde"] }
pollster = "0.4"
open = "5"

# Performance - faster HashMap/HashSet
hashbrown = { version = "0.16", features = ["serde"] }

# Performance - inline small vectors
smallvec = "1"

# WASM analysis
wasmparser = "0.243"

# CLI tools
clap = { version = "4", features = ["derive"] }

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
gif = "0.13"

# Texture compression
intel_tex_2 = "0.5"

# Asset import
gltf = "1"
hound = "3"

# UI file dialogs
rfd = "0.16"

# Parallelism
rayon = "1"

# File system utilities
walkdir = "2"
which = "8"

# Cryptography
sha2 = "0.10"  # Stable version, compatible with hmac 0.12
hmac = "0.12"
hex = "0.4"

# PNG metadata access (for screenshot signing)
png = "0.17"

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Dev dependencies (used in multiple crates)
tempfile = "3"
wat = "1"
