[package]
name = "emberware-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core framework for Emberware fantasy console platform"

[dependencies]
# Shared types
emberware-shared = { path = "../shared" }
z-common = { path = "../z-common" }

# WASM execution
wasmtime = { workspace = true }

# WASM static analysis (for build-time config detection)
wasmparser = { workspace = true }

# Rollback netcode
ggrs = { workspace = true }

# Windowing
winit = { workspace = true }

# Math
glam = { workspace = true }

# Serialization for input/state
bytemuck = { workspace = true }

# Async runtime for networking
tokio = { workspace = true, features = ["rt", "sync"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
log = { workspace = true }

# Random number generation (deterministic)
rand = { workspace = true }
rand_pcg = { workspace = true }

# Fast checksums for rollback state (SIMD-optimized)
xxhash-rust = { workspace = true }

# Serialization for network messages
bincode = { workspace = true }

# Application framework dependencies (Step 1)
gilrs = { workspace = true }         # Gamepad input (NOTE: upgraded from 0.10 to 0.11)
serde = { workspace = true }
toml = { workspace = true }          # Config file format
directories = { workspace = true }   # Platform-specific paths
hashbrown = { workspace = true }     # Fast HashMap
tracing = { workspace = true }       # Logging
egui = { workspace = true }          # Debug overlay UI
serde_json = { workspace = true }    # JSON for game manifests

[dev-dependencies]
# WAT text format parser for test WASM modules
wat = { workspace = true }
tempfile = { workspace = true }      # Temporary directories for tests
