[package]
name = "nethercore-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core framework for Nethercore fantasy console platform"

[features]
default = ["gamepad"]
gamepad = ["dep:gilrs"]

[dependencies]
# Shared types
nethercore-shared = { path = "../shared" }

# WASM execution
wasmtime = { workspace = true }

# WASM static analysis (for build-time config detection)
wasmparser = { workspace = true }

# Rollback netcode
ggrs = { workspace = true }

# Windowing
winit = { workspace = true }

# Math
glam = { workspace = true }

# Serialization for input/state
bytemuck = { workspace = true }

# Async runtime for networking
tokio = { workspace = true, features = ["rt", "sync"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
log = { workspace = true }

# Random number generation (deterministic)
rand = { workspace = true }
rand_pcg = { workspace = true }

# Fast checksums for rollback state (SIMD-optimized)
xxhash-rust = { workspace = true }

# Serialization for network messages
bincode = { workspace = true }
bitcode = { workspace = true }  # For NCHS protocol messages

# Application framework dependencies (Step 1)
gilrs = { workspace = true, optional = true }  # Gamepad input (optional, requires libudev on Linux)
serde = { workspace = true }
toml = { workspace = true }          # Config file format
directories = { workspace = true }   # Platform-specific paths
hashbrown = { workspace = true }     # Fast HashMap
smallvec = { workspace = true }      # Inline small vectors
tracing = { workspace = true }       # Logging
egui = { workspace = true }          # Debug overlay UI
egui-wgpu = { workspace = true }     # egui wgpu renderer
egui-winit = { workspace = true }    # egui winit integration
serde_json = { workspace = true }    # JSON for game manifests

# Replay system
lz4_flex = { workspace = true }      # Compression for replay data
byteorder = { workspace = true }     # Byte order handling for binary format
bitflags = { workspace = true }      # Replay flags

# Screen capture dependencies
wgpu = { workspace = true }          # GPU texture readback
image = { workspace = true }         # PNG encoding (for reading)
png = { workspace = true }           # PNG encoding with metadata (for signed screenshots)
gif = { workspace = true }           # GIF encoding
chrono = { workspace = true }        # Timestamps for filenames

[dev-dependencies]
# WAT text format parser for test WASM modules
wat = { workspace = true }
tempfile = { workspace = true }      # Temporary directories for tests
