[package]
name = "ember-qoa"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Modified QOA codec for Emberware (no file magic, sample rate in frames only)"

[dependencies]
# None - pure Rust, no external dependencies

[dev-dependencies]
# None needed - simple roundtrip tests only

[lints.clippy]
all = "warn"
