[package]
name = "emberware-z"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Emberware Z - Fantasy console runtime"

[lib]
name = "emberware_z"
path = "src/lib.rs"

[dependencies]
emberware-core = { path = "../core" }
emberware-shared = { path = "../shared" }

# WASM runtime
wasmtime = { workspace = true }

# Graphics
wgpu = { workspace = true }
winit = { workspace = true }

# Audio
rodio = { workspace = true }

# Input
gilrs = { workspace = true }

# UI (minimal library)
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }

# Rollback netcode
ggrs = { workspace = true }
bytemuck = { workspace = true }

# HTTP (for downloads)
reqwest = { workspace = true, features = ["json", "stream"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }

# Math
glam = { workspace = true }

# Utilities
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
rfd = "0.15"
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
pollster = { workspace = true }
open = { workspace = true }

# Performance - faster HashMap/HashSet
hashbrown = { workspace = true }

[build-dependencies]
naga = { version = "23", features = ["wgsl-in"] }

[dev-dependencies]
naga = { version = "23", features = ["wgsl-in"] }
tempfile = "3"
