[package]
name = "emberware-z"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Emberware Z - Fantasy console runtime"

[lib]
name = "emberware_z"
path = "src/lib.rs"

[[bin]]
name = "emberware-z"
path = "src/bin/main.rs"

[features]
default = ["gamepad"]
gamepad = ["emberware-core/gamepad", "z-common/gamepad"]

[dependencies]
# CLI (for player binary)
clap = { version = "4", features = ["derive"] }

emberware-core = { path = "../core", default-features = false }
emberware-shared = { path = "../shared" }
z-common = { path = "../z-common", default-features = false }

# WASM runtime
wasmtime = { workspace = true }

# Graphics
wgpu = { workspace = true }
winit = { workspace = true }

# Audio
cpal = { workspace = true }
ringbuf = { workspace = true }

# UI (minimal library)
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }

# Rollback netcode
ggrs = { workspace = true }
bytemuck = { workspace = true }

# HTTP (for downloads)
reqwest = { workspace = true, features = ["json", "stream"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }

# Math
glam = { workspace = true }
half = { workspace = true }

# Utilities
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
rfd = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
pollster = { workspace = true }
open = { workspace = true }

# Performance - faster HashMap/HashSet
hashbrown = { workspace = true }

# Screenshot/GIF capture
image = { workspace = true }
gif = "0.13"

[build-dependencies]
naga = { version = "23", features = ["wgsl-in"] }

[dev-dependencies]
naga = { version = "23", features = ["wgsl-in"] }
tempfile = "3"
