[package]
name = "nether-xm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "XM (Extended Module) tracker format parser for Nethercore"

[dependencies]
thiserror = "1"

[dev-dependencies]
# None needed - simple tests only

[lints.clippy]
all = "warn"
