[package]
name = "nethercore-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types for Nethercore fantasy console platform"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bitcode = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true }

# Screenshot signing
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
