[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local crates
emberware-shared = { path = "../shared" }
emberware-core = { path = "../core" }
z-common = { path = "../z-common" }

# Workspace dependencies
anyhow = "1"
serde_json = "1"
chrono = "0.4"
directories = "5"
bitcode = "0.6"

# CLI and cart tools
clap = { version = "4", features = ["derive"] }
image = "0.24"
sha2 = "0.10"
