[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local crates
emberware-shared = { path = "../shared" }
emberware-core = { path = "../core" }
z-common = { path = "../z-common" }

# Workspace dependencies
anyhow = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
bitcode = { workspace = true }

# CLI and cart tools
clap = { workspace = true }
image = { workspace = true }  # NOTE: Upgraded from 0.24 to 0.25
sha2 = { workspace = true }
rayon = { workspace = true }
