[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local crates
nethercore-shared = { path = "../shared" }
nethercore-core = { path = "../core", default-features = false }
zx-common = { path = "../zx-common", default-features = false, features = ["loader"] }
ffi-gen = { path = "../tools/ffi-gen" }

# Workspace dependencies
anyhow = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
bitcode = { workspace = true }

# CLI and cart tools
clap = { workspace = true }
image = { workspace = true }  # NOTE: Upgraded from 0.24 to 0.25
sha2 = { workspace = true }
rayon = { workspace = true }
walkdir = { workspace = true }
