[package]
name = "z-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types and utilities for Emberware Z console"

[dependencies]
# Local crates
emberware-shared = { path = "../shared" }

# Vertex packing
glam = { workspace = true }
half = { workspace = true }
bytemuck = { workspace = true }

# Serialization (for ROM and data pack formats)
serde = { version = "1", features = ["derive"] }
bitcode = "0.6"

# Time (for ROM manifest generation)
chrono = "0.4"

# Error handling
anyhow = "1"
