[package]
name = "z-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types and utilities for Emberware Z console"

[features]
default = ["gamepad"]
gamepad = ["emberware-core/gamepad"]

[dependencies]
# Local crates
emberware-shared = { path = "../shared" }
emberware-core = { path = "../core", default-features = false }

# Vertex packing
glam = { workspace = true }
half = { workspace = true }
bytemuck = { workspace = true }

# Serialization (for ROM and data pack formats)
serde = { workspace = true }
serde_json = { workspace = true }
bitcode = { workspace = true }

# Time (for ROM manifest generation)
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
