[package]
name = "zx-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types and utilities for Nethercore ZX console"

[features]
default = ["gamepad", "loader"]
loader = ["dep:nethercore-core"]
gamepad = ["nethercore-core?/gamepad"]

[dependencies]
# Local crates
nethercore-shared = { path = "../shared" }
nethercore-core = { path = "../core", default-features = false, optional = true }
nether-qoa = { path = "../nether-qoa" }
nether-xm = { path = "../nether-xm" }

# Vertex packing
glam = { workspace = true }
half = { workspace = true }
bytemuck = { workspace = true }

# Serialization (for ROM and data pack formats)
serde = { workspace = true }
serde_json = { workspace = true }
bitcode = { workspace = true }

# Time (for ROM manifest generation)
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Fast HashMap for asset lookups
hashbrown = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
