[package]
name = "ember-export"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Emberware asset export tool - converts raw assets to GPU-ready binary formats"

[[bin]]
name = "ember-export"
path = "src/main.rs"

[features]
default = ["gamepad"]
gamepad = ["zx-common/gamepad"]

[dependencies]
# Local crates
zx-common = { path = "../../zx-common", default-features = false }
emberware-shared = { path = "../../shared" }
ember-qoa = { path = "../../ember-qoa" }

hashbrown = { workspace = true }

# CLI
clap = { workspace = true }

# Serialization
toml = { workspace = true }
serde = { workspace = true }

# Asset loading
gltf = { workspace = true }
image = { workspace = true }
hound = { workspace = true }  # WAV loading
bytemuck = { workspace = true }

# Texture compression
intel_tex_2 = { workspace = true }  # BC7 compression (ISPC-based, high quality)

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
