[package]
name = "gen-assets"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gen-assets"
path = "src/main.rs"

[dependencies]
proc-gen = { path = "../proc-gen", features = ["wav-export"] }
proc-gen-showcase-defs = { path = "../../examples/proc-gen-showcase-defs" }
clap = { version = "4", features = ["derive"] }
