[package]
name = "gen-glb-inline-assets"
version = "0.1.0"
edition = "2021"
description = "Generate multi-animation GLB for glb-inline example"

[dependencies]
# Shared GLB construction library
glb-builder = { path = "../glb-builder" }
gltf-json = "1"

# Error handling
anyhow = { workspace = true }
