[package]
name = "gen-glb-rigid-assets"
version = "0.1.0"
edition = "2021"
description = "Generate multi-mesh rigid animation GLB for glb-rigid example"

[dependencies]
# Shared GLB construction library
glb-builder = { path = "../glb-builder" }
gltf-json = "1"

# Error handling
anyhow = { workspace = true }
