[package]
name = "gen-gltf-test-assets"
version = "0.1.0"
edition = "2021"
description = "Generate test assets for gltf-test example - GLB conversion and texture generation"

[dependencies]
# For GLB construction
gltf-json = "1"
gltf = { workspace = true }
bytemuck = { workspace = true }

# For asset conversion
nether-export = { path = "../nether-export" }
zx-common = { path = "../../zx-common" }

# For PNG generation
image = { workspace = true }

# Error handling
anyhow = { workspace = true }
