[package]
name = "gen-gltf-test-assets"
version = "0.1.0"
edition = "2021"
description = "Generate test assets for gltf-test example - GLB conversion and texture generation"

[dependencies]
# Shared GLB construction library
glb-builder = { path = "../glb-builder" }
gltf-json = "1"

# For asset conversion
nether-export = { path = "../nether-export", default-features = false }
zx-common = { path = "../../zx-common", default-features = false }

# For PNG generation
image = { workspace = true }

# Error handling
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
